--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This application will serve up some static files.",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Prerna Sharma",
